name:                rison
version:             0.1.0.0
synopsis:            Support for parsing and rendering RISON strings.
description:         Please see README.md
homepage:            https://github.com/martinvlk/rison-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Vlk
maintainer:          martin@vlkk.cz
copyright:           2016 Martin Vlk
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Rison
  other-modules:       
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , parsers
                     , text
                     , bytestring
                     , aeson
                     , unordered-containers
                     , strings
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/martinvlk/rison-hs

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test, src
  build-depends: base >= 4.7 && < 5
               , attoparsec
               , parsers
               , text
               , bytestring
               , aeson
               , unordered-containers
               , strings
               , vector
               , hspec
               , rison
